[package]
name = "fc-blackbox"
version = "0.1.0"
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
num-traits = "0.2"
nom = { version = "6", features = ["alloc"] }
itertools = "0.10"
integer-encoding = "3"
chrono = "0.4"
num-rational = "0.4"
thiserror = "*"

[dev-dependencies]
anyhow = "*"
